tests/NormalTests/paczka1/fuzzy1/20621172.err
Error in line 5: zPxwEJvO A993 89,8
Error in line 9: vUo A993 79,0
Error in line 15: Fn4IJ A544 14,8
Error in line 27: Fn4IJ A544 11,2
Error in line 28: Fn4IJ A993 0,1
Error in line 40: oIxSnXAs3 A7*8 62,*
